tests/rosetta/out/Java/chernicks-carmichael-numbers.error
parse: error[P999]: /workspace/mochi/tests/rosetta/x/Mochi/chernicks-carmichael-numbers.mochi:22:21: unexpected token "-1" (expected "]")
  --> /workspace/mochi/tests/rosetta/x/Mochi/chernicks-carmichael-numbers.mochi:22:21

 22 |   while n > 1 && a[n-1] == 0 {
    |                     ^

help:
  Parse error occurred. Check syntax near this location.